[package]
name = "yew-library"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew", branch="master" }
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.129" }
web-sys = { version = "0.3.53", features = ["Window", "Location"] }

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true